Change vh to dvh to fix searchbar on mobile.

--- a/test/style.css
+++ b/test/style.css
@@ -485,7 +485,7 @@ footer {
         top: 5.625rem;
         right: -100%;
         width: 100%;
-        height: calc(100vh - 5.625rem);
+        height: calc(100dvh - 5.625rem);
         z-index: 9888;
         display: flex;
         flex-direction: column;
